tests/paczka1/fuzzy1/17444330.err
Error in line 4: g4YawkB88S A186 21,6
Error in line 8: aWlbjtr9IJ S980 37,1
Error in line 9: aWlbjtr9IJ A186 20,5
Error in line 19: aWlbjtr9IJ S980 10,6
Error in line 26: g4YawkB88S A186 88,0
Error in line 23: DkQCU A472 28,6
Error in line 28: g4YawkB88S S870 19,0
Error in line 30: DkQCU S870 43,0
Error in line 31: g4YawkB88S A472 1,2
Error in line 32: DkQCU A186 45,7
Error in line 33: g4YawkB88S A186 50,1
